[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/enemies/Pawn/Pawn.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1, 1.00245 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="PrismMesh" id=3]

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 2, 0.3 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
params_cull_mode = 2
albedo_texture = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[node name="Pawn" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="HitArea" type="Area" parent="."]

[node name="HitBox" type="CollisionShape" parent="HitArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.1 )
shape = SubResource( 2 )
disabled = true

[node name="placeholder" type="MeshInstance" parent="."]
transform = Transform( -1, 3.25841e-07, -5.30863e-14, 0, -1.62921e-07, -1, -3.25841e-07, -1, 1.62921e-07, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 2.07943, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 91, 14 )
keep_3d_linear = true
usage = 0
render_target_v_flip = true

[node name="Health" type="ProgressBar" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.62939e-06
margin_bottom = 9.53674e-07
size_flags_horizontal = 3
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 100.0
percent_visible = false
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
